--- a/contacto.HTML
+++ b/contacto.HTML
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contacto</title>
+    <p>Instructora</p>
 </head>
 <body>
     <h1>mlupemolinaa@gmail.com</h1>
